syntax = "proto3";
package works.witnesses;

service Witnesses {
    rpc Index(WitnessesRequest) returns (WitnessesResponse) {}
}

message WitnessesRequest {
    int32  page = 1;
    int32  pageSize = 2;
    int32   uid = 4;
    string worksId = 5;
}

message WitnessesResponse {
    repeated Witness data = 12;
    int32 affectedRows = 11;
    int32 total = 13;
}

message Witness {
    int32   id = 1;
    int32   ui = 2;
    string  eventId = 3;
    int32   isLiteEvent = 4;
    string    title  = 5;
    string   reason = 6;
    int64    ip = 7;
    string   uidEventId = 8;
    string   create_time = 9;
    string   update_time = 10;
}


